--- a/index.Rmd
+++ b/index.Rmd
@@ -11,14 +11,16 @@ mode        : selfcontained # {standalone, draft}
 knit        : slidify::knit2slides
 ---
 
-## The Real MLB Strike Zone
+## The MLB STRIKE ZONE
 
-- Question: does the real Major League Baseball STRIKE ZONE, as called by umpires, conform to the MLB Rulebook's definition?
+- Question:
+
+  - Does the real Major League Baseball STRIKE ZONE, as called by umpires, conform to the MLB Rulebook's definition?
   
   - If not, what are the true shape and dimensions of the strike zone?
 
 - Major League Baseball Rulebook, Rule 2.00, The STRIKE ZONE   
-<http://mlb.mlb.com/mlb/official_info/umpires/rules_interest.jsp>:
+(<http://mlb.mlb.com/mlb/official_info/umpires/rules_interest.jsp>):
 
   - "The STRIKE ZONE is that area over home plate the upper limit of which is a horizontal line at the midpoint between the top of the shoulders and the top of the uniform pants, and the lower level is a line at the hollow beneath the kneecap. The Strike Zone shall be determined from the batter's stance as the batter is prepared to swing at a pitched ball."
 
@@ -32,12 +34,10 @@ The Shiny app has two main parts (switched via the radio button):
 
 2. Plots of a General Additive Model which show the probability that a pitch thrown in a certain location will be called a strike.
 
-- The data are from the publicly-available PitchFX database.
-
 - Options
-  - The drop down menu allows the user to analyze any of a selection of MLB pitchers.
+  - The drop down menu allows the user to analyze a selection of MLB pitchers.
   - You can toggle the rulebook-defined strike zone.
-  - You can adjust the bounds of the x- and y-axes.
+  - You can adjust the bounds of the x- and y-axes to zoom.
 
 --- &twocol
 
@@ -45,13 +45,13 @@ The Shiny app has two main parts (switched via the radio button):
 
 *** =left
 
-- The dotted black line represents the MLB Rulebook definition of the strike zone.
+- The dotted black line is an approximation of the MLB Rulebook definition of the STRIKE ZONE.
 
-- The orange contour lines represent increasing densities of called strikes. 
+- The <orange> contour lines represent increasing densities of called strikes. 
 
-- The "dodger blue" contour lines indicate increasing densities of balls. 
+- The <dodger blue> contour lines denote increasing densities of called balls. 
 
-- Each densitiy is emphasized by the background coloring of the plot.
+- The background coloring of the plot emphasizes each density.
 
 *** =right
 ```{r density.plot, echo=FALSE, message=FALSE, warning=FALSE}
@@ -115,11 +115,13 @@ density.plot("Jon Lester", 0.8, -2.5, 2.5, 0, 5)
 
 *** =left
 
-- Again, the dotted black line represents the MLB Rulebook definition of the strike zone.
+- Again, the dotted black line is an approximation of the MLB Rulebook definition of the STRIKE ZONE.
 
 - Each color band represents a different probability that a pitch in a specific location will be called a strike.
 
-- The boundary between the green and blue bands forms the shape of the modeled strike zone. At this boundary, there is a 50/50 chance of the pitch being called a strike or ball.
+- The boundary between the green and light blue bands forms the shape of the modeled STRIKE ZONE. 
+  
+  - At this decision boundary, there is a 50/50 chance of the pitch being called a ball or strike.
 
 *** =right
 ```{r model.plot, echo=FALSE, message=FALSE, warning=FALSE}
